--- a/css_basico/introducao/index.html
+++ b/css_basico/introducao/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Bikcraft</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <img src="img/bikcraft.png" alt="Bikcraft">
@@ -16,5 +17,6 @@
             <li><a href="retro.html">Retro</a></li>
         </ul>
 
+        <p>"Confira todos os nossos produtos."</p>
     </body>
 </html>
