--- a/web/produtos.html
+++ b/web/produtos.html
@@ -132,7 +132,7 @@
 				<div class="orcamento_dados grid-8">
 					<h3>Dados</h3>
 					<span>+55 21 99999-9999</span>
-					<span class="dados_email">orcamento@bikecraft.com</span>
+					<span>orcamento@bikecraft.com</span>
 					<h3>Monte a sua Bikecraft</h3>
 					<p>Escolha as especificações</p>
 					<ul>
